--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,67 +1,57 @@
 name: delivery_boy
 description: A new Flutter project.
-publish_to: 'none' 
-version: 1.0.0+7
+publish_to: "none"
+version: 1.0.0+9
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ">=3.0.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  dio: ^4.0.6
+  dio: ^5.1.2
   get: ^4.6.5
-  flutter_svg: ^1.0.3
-  google_fonts: ^3.0.1
+  flutter_svg: ^2.0.6
+  # google_fonts: ^3.0.1
   font_awesome_flutter: ^10.2.1
   google_maps_flutter: ^2.2.1
-  geocode: ^1.0.2
-  geocoding: ^2.0.5
+  geocode: ^1.0.3
+  geocoding: ^2.1.0
   geolocator: ^9.0.2
-  connectivity_plus: ^2.3.7
-  simple_fontellico_progress_dialog: ^0.2.1
-  shared_preferences: ^2.0.15
-  cached_network_image: ^3.2.2
-  flutter_spinkit: ^5.1.0
-  url_launcher: ^6.1.4
-  bot_toast: ^4.0.3
-  firebase_messaging: ^11.2.10
-  firebase_core: ^1.13.1
-  flutter_screenutil: ^5.3.1
+  # connectivity_plus: ^2.3.7
+  simple_fontellico_progress_dialog: ^0.3.0
+  shared_preferences: ^2.1.1
+  cached_network_image: ^3.2.3
+  flutter_spinkit: ^5.2.0
+  url_launcher: ^6.1.11
+  bot_toast: ^4.0.4
+  firebase_messaging: ^14.6.2
+  firebase_core: ^2.13.1
+  flutter_screenutil: ^5.8.4
   flutter_google_places: ^0.3.0
   google_place: ^0.4.7
-  vibration: ^1.7.6
-  shimmer: ^2.0.0
+  vibration: ^1.7.7
+  shimmer: ^3.0.0
   intl: ^0.17.0
   skeleton_text: ^3.0.0
-  awesome_notifications: ^0.6.21
-  sunmi_printer_plus: ^2.1.1
-  esc_pos_utils: ^1.1.0
-  
-
-
+  awesome_notifications: ^0.7.4+1
+  # sunmi_printer_plus: ^2.1.1
+  # esc_pos_utils: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 flutter:
-
-
   uses-material-design: true
 
   fonts:
-   - family: Cairo
-     fonts:
-       - asset: assets/fonts/Cairo-Regular.ttf
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/Cairo-Regular.ttf
 
-  
   assets:
     - assets/svg/
     - assets/icons/
     - assets/images/
     - assets/fonts/
-    
-
-  
